[FSPE-5409] Fixed misalignment in -active base steps component in IE11

--- a/src/chi/components/steps/steps.scss
+++ b/src/chi/components/steps/steps.scss
@@ -257,9 +257,13 @@ $breakpoints: ('sm', 'md', 'lg', 'xl');
     right: 1.5625rem;
   }
 
+  .chi-steps li:first-child.-active div.chi-steps__icon::after {
+    right: 3.4375rem;
+  }
+
   .chi-steps li.-active div.chi-steps__icon::after {
     position: relative;
-    right: 3.4375rem;
+    right: 3.5875rem;
   }
 
   .chi-steps div.chi-steps__icon::before,
